# zbus_polkit_agent

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rustci.yml
examples/: agent_session.rs  min_example.rs
src/: agent_session.rs  error.rs  flags.rs  identify.rs  interface.rs  lib.rs  main.rs  unixsession.rs
