[package]
name = "zbus-polkit-agent"
version = "0.1.0"
edition = "2024"
license = "GPL-v3"
keywords = ["zbus", "polkit"]
description = "polkit-agent binding for zbus"
authors = ["Decodertalkers <aakari@tutanota.com>"]
repository = "https://github.com/Decodetalkers/zbus_polkit_agent"

[dependencies]
bitflags = { version = "2.11.1", features = ["serde"] }
enumflags2 = { version = "0.7.12", features = ["serde"] }
flume = "0.12.0"
nix = { version = "0.31.2", features = ["process", "user"] }

serde = { version = "1.0.228", features = ["derive"] }
systemd = "0.10.1"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
zbus = "5.15.0"
zbus_polkit = "5.0.0"

[dev-dependencies]
rpassword = "7.5.2"
